# quiz-gen

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
data/raw/: 2024_1689_Artificial Intelligence_Act.html
docs/: agents.md  api.md  cli.md  examples.md  getting-started.md  index.md  parsers.md
examples/: easa_chunking.py  eu_lex_toc_chunks.py  eur_lex_html_file.py  eur_lex_html_url.py  explore_db.py  quiz_gen_2018_1139_annex_ix.py  quiz_gen_2018_1139_art_47.py  quiz_gen_2018_1139_art_77.py  quiz_gen_multi_model.py
src/quiz_gen/: __init__.py  __version__.py  cli.py
src/quiz_gen/agents/: conceptual_generator.py  config.py  judge.py  practical_generator.py  refiner.py  validator.py  workflow.py
src/quiz_gen/parsers/: __init__.py
src/quiz_gen/parsers/html/: eu_lex_parser.py  eur_lex_parser.py
src/quiz_gen/storage/: __init__.py  projects.py
src/quiz_gen/ui/: api.py  projects.py  server.py
src/quiz_gen/ui/static/: index.html
src/quiz_gen/ui/static/assets/: index-B8fRgm2f.css  index-BiMHApLz.css  index-C0x1OuPJ.js  index-C6DzywUJ.css  index-C6xFQP9C.js  index-CWs_ogoy.js  index-D6JUWC8U.css  (+4 more)
src/quiz_gen/utils/: helpers.py
tests/: test_version_fallback.py
tests/test_agents/: test_conceptual_generator.py  test_config.py  test_judge.py  test_practical_generator.py  test_refiner.py  test_validator.py  test_workflow.py
tests/test_cli/: test_cli.py
tests/test_parsers/: test_eur_lex_parser.py
tests/test_utils/: __init__.py  test_helpers.py
