[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiz-gen"
version = "0.1.11"
description = "AI-powered quiz generator for regulatory, certification, and educational documentation"
readme = "README.md"
authors = [{name = "Yauheniya Varabyova"}]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["quiz", "regulation", "certification", "education", "eur-lex", "cfr"]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "twine>=4.0.0",
    "mkdocs",
    "mkdocs-material",
]

[project.urls]
"Documentation" = "https://quiz-gen.readthedocs.io"
"Repository" = "https://github.com/yauheniya-ai/quiz-gen"

[project.scripts]
quiz-gen = "quiz_gen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]